Finalise readme for project submission, fix text size on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -491,17 +491,17 @@ input[type=text], select, textarea, input[type=tel], input[type=email] {
         height: 20vh;
     }
     #logo {
-        font-size: 1.5em;
+        font-size: 1em;
         text-align: center;
     }
     #logo:hover {
-        font-size: 1.6em;
+        font-size: 1em;
     }
     #menu {
         font-size: 1em;
     }
     .home-text {
-        font-size: 2.8vw;
+        font-size: 2.6vw;
         top: 0;
         padding-top: 16px;
     }
@@ -549,6 +549,10 @@ input[type=text], select, textarea, input[type=tel], input[type=email] {
         font-size: 12px;
         text-align: center;
     }
+    #contact-link {
+        padding: 4px 8px;
+        font-size: 2vw;
+    }
     #credit {
         font-size: 1vw;
         bottom: 100px;
@@ -563,9 +567,6 @@ input[type=text], select, textarea, input[type=tel], input[type=email] {
 
 
 @media screen and (max-width: 400px) {
-    #logo {
-        font-size: 1.3em;
-    }
     #menu {
         float: none;
         padding-bottom: 5%;
@@ -584,6 +585,10 @@ input[type=text], select, textarea, input[type=tel], input[type=email] {
     }
     #logo {
         padding-bottom: 20px;
+    }
+    .home-text {
+        font-size: 2.8vw;
+        padding-top: 16px;
     }
     #text-content {
         font-size: 2.5vw;
